objects/Product_Level_2__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code_ID__c</fullName>
        <description>This aligns with Desk in MyMI all ID&apos;s should start with a C</description>
        <label>Product Code ID</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Level 2</relationshipLabel>
        <relationshipName>Product_Level_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UK_Barclays_Product2_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays Product2 ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Level 2</label>
    <listViews>
        <fullName>Active_Product_Level_2</fullName>
        <columns>NAME</columns>
        <columns>Product_Code_ID__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Product Level 2</label>
    </listViews>
    <nameField>
        <label>Level 2 Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Level 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>